--- a/TeamPi_6968_Dashboard/index.html
+++ b/TeamPi_6968_Dashboard/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <H1>The ultimate Dashboard</H1>
+  <H1>The ultimate Pi Dashboard</H1>
 
   <div class="column">
     <div id='PlayingField'></div>
@@ -29,16 +29,19 @@
 
   <div class="column">
     <H3>Designated cordinate</H3>
-    <form id = >
+    <form>
       X-cordinate:<br>
       <input type="text"
-        name="x-cordinate"><br>
+        name="x-cordinate"
+        id = "x-input"><br>
       Y-cordinate:<br>
       <input type="text"
-        name="y-cordinate"><br>
+        name="y-cordinate"
+        id = "y-input"><br>
       Angle:<br>
       <input type="text"
-        name="angle-cordinate"><br>
+        name="angle-cordinate"
+        id = "angle-input"><br>
       <button id = "SendCordinate"
         type="button">Execute</button>
     </form>
